2008-10-18  Shawn Betts  <sabetts@gmail.com>
	Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (get-wm-class): expect the
	unexpected: there may be many Nulls in WM_CLASS

2008-10-18  Adam Warner  <awarner@users.sourceforge.net>

	fix bug #[ 2175937 ]: Patch --without-unicode build failure
	* pathname.d (direntry_to_string) [!UNICODE]: restore non-UNICODE
	build by using n_char_to_string()

2008-10-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (docdir): defaults in configure to
	${datarootdir}/doc/${PACKAGE_TARNAME},
	not ${datarootdir}/doc/${PACKAGE}
	Reported by "Jose A. Ortega Ruiz" <jao@gnu.org>
	in <http://article.gmane.org/gmane.lisp.clisp.general/12471>

2008-10-17  Sam Steingold  <sds@gnu.org>

	* makemake.in: partially reverted the 2008-10-10 (revision 1.775) patch
	which broke Solaris 8 which requires "gllib/stdint.h".
	CPPFLAGS is for host (and this goes into UTILCOMPILE) while
	XCPPFLAGS is for target (and thus is used to compile *.d)
	Reported by Raymond Toy <raymond.toy@ericsson.com>

2008-10-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (USER-INFO): for :DEFAULT,
	use getpwuid(getuid()) if getlogin() fails

2008-10-16  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (CHECK_TYPE): add
	(ensure_living_display, get_ptr_object_and_display)
	(make_xid_obj_low, get_xid_object_and_display, get_display_obj_tc)
	(general_plist_reader, general_plist_writer, SET-WM-HINTS): use it

2008-10-16  Drutsa Pavel  <rawlik@users.sourceforge.net>

	fix bug #[ 2164603 ]: Error: should have been a WINDOW, but was PIXMAP
	* modules/clx/new-clx/clx.f (make_drawable): use
	"make_xid_obj (`XLIB::DRAWABLE`...)" instead of "make_window()"

2008-10-13  Michael Kappert  <michael.kappert@gmx.net>
	Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): strip CR (\r) from all output for woe32

2008-10-13  Sam Steingold  <sds@gnu.org>

	* makemake.in, configure: remove --enable-maintainer-mode and