@@ -1,3 +1,9 @@
+2008-10-20  Sam Steingold  <sds@gnu.org>
+
+	* utils/modprep.lisp (print-tables-1): check that the DEFCHECKER
+	default is a valid CPP constant ([_A-Za-z0-9]*) before protecting
+	it with "#ifdef" to accommodate "(unsigned)~0" et al
+
 2008-10-18  Shawn Betts  <sabetts@gmail.com>
 	Sam Steingold  <sds@gnu.org>
 
